realizando o exercicio8 e os testes com o arquivo main em todos os exercicios